@@ -1,0 +1,159 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.hadoop.yarn.webapp
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|sun
+operator|.
+name|jersey
+operator|.
+name|test
+operator|.
+name|framework
+operator|.
+name|JerseyTest
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|sun
+operator|.
+name|jersey
+operator|.
+name|test
+operator|.
+name|framework
+operator|.
+name|WebAppDescriptor
+import|;
+end_import
+
+begin_class
+DECL|class|JerseyTestBase
+specifier|public
+specifier|abstract
+class|class
+name|JerseyTestBase
+extends|extends
+name|JerseyTest
+block|{
+DECL|method|JerseyTestBase (WebAppDescriptor appDescriptor)
+specifier|public
+name|JerseyTestBase
+parameter_list|(
+name|WebAppDescriptor
+name|appDescriptor
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|appDescriptor
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Before
+DECL|method|initializeJerseyPort ()
+specifier|public
+name|void
+name|initializeJerseyPort
+parameter_list|()
+block|{
+name|int
+name|jerseyPort
+init|=
+literal|9998
+decl_stmt|;
+name|String
+name|port
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"jersey.test.port"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|port
+condition|)
+block|{
+name|jerseyPort
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|port
+argument_list|)
+operator|+
+literal|10
+expr_stmt|;
+if|if
+condition|(
+name|jerseyPort
+operator|>
+literal|65535
+condition|)
+block|{
+name|jerseyPort
+operator|=
+literal|9998
+expr_stmt|;
+block|}
+block|}
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"jersey.test.port"
+argument_list|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|jerseyPort
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
