@@ -628,6 +628,22 @@ name|yarn
 operator|.
 name|webapp
 operator|.
+name|JerseyTestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+operator|.
 name|YarnJacksonJaxbJsonProvider
 import|;
 end_import
@@ -786,22 +802,6 @@ name|test
 operator|.
 name|framework
 operator|.
-name|JerseyTest
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|sun
-operator|.
-name|jersey
-operator|.
-name|test
-operator|.
-name|framework
-operator|.
 name|WebAppDescriptor
 import|;
 end_import
@@ -812,7 +812,7 @@ specifier|public
 class|class
 name|TestTimelineWebServices
 extends|extends
-name|JerseyTest
+name|JerseyTestBase
 block|{
 DECL|field|store
 specifier|private
