@@ -502,6 +502,22 @@ name|yarn
 operator|.
 name|webapp
 operator|.
+name|JerseyTestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+operator|.
 name|WebApp
 import|;
 end_import
@@ -792,22 +808,6 @@ name|test
 operator|.
 name|framework
 operator|.
-name|JerseyTest
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|sun
-operator|.
-name|jersey
-operator|.
-name|test
-operator|.
-name|framework
-operator|.
 name|WebAppDescriptor
 import|;
 end_import
@@ -818,7 +818,7 @@ specifier|public
 class|class
 name|TestNMWebServicesContainers
 extends|extends
-name|JerseyTest
+name|JerseyTestBase
 block|{
 DECL|field|nmContext
 specifier|private
