@@ -274,6 +274,22 @@ name|yarn
 operator|.
 name|webapp
 operator|.
+name|JerseyTestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+operator|.
 name|WebServicesTestUtils
 import|;
 end_import
@@ -516,22 +532,6 @@ name|test
 operator|.
 name|framework
 operator|.
-name|JerseyTest
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|sun
-operator|.
-name|jersey
-operator|.
-name|test
-operator|.
-name|framework
-operator|.
 name|WebAppDescriptor
 import|;
 end_import
@@ -542,7 +542,7 @@ specifier|public
 class|class
 name|TestRMWebServicesCapacitySched
 extends|extends
-name|JerseyTest
+name|JerseyTestBase
 block|{
 DECL|field|rm
 specifier|private
