@@ -506,6 +506,22 @@ name|yarn
 operator|.
 name|webapp
 operator|.
+name|JerseyTestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+operator|.
 name|WebServicesTestUtils
 import|;
 end_import
@@ -903,7 +919,7 @@ specifier|public
 class|class
 name|TestRMWebServicesDelegationTokens
 extends|extends
-name|JerseyTest
+name|JerseyTestBase
 block|{
 DECL|field|testRootDir
 specifier|private
