@@ -248,6 +248,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+operator|.
+name|JerseyTestBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|codehaus
 operator|.
 name|jettison
@@ -460,22 +476,6 @@ name|test
 operator|.
 name|framework
 operator|.
-name|JerseyTest
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|sun
-operator|.
-name|jersey
-operator|.
-name|test
-operator|.
-name|framework
-operator|.
 name|WebAppDescriptor
 import|;
 end_import
@@ -486,7 +486,7 @@ specifier|public
 class|class
 name|TestRMWebServicesNodeLabels
 extends|extends
-name|JerseyTest
+name|JerseyTestBase
 block|{
 DECL|field|LOG
 specifier|private
